Add php.ini override

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - "./site/:/var/www/html/"
       - "./config/apache/000-default.conf:/etc/apache2/sites-available/000-default.conf"
+      - "./config/php/override-php.ini:/usr/local/etc/php/conf.d/override-php.ini"
     ports:
       - "80:80"
 
