Add Mailhog + README

--- a/config/docker/Dockerfile
+++ b/config/docker/Dockerfile
@@ -9,6 +9,10 @@ RUN groupadd -g "${HOST_GROUP_ID}" "${HOST_GROUP_NAME}" && \
     useradd -g ${HOST_GROUP_ID} -u ${HOST_USER_ID} -m ${HOST_USER_NAME}
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends \
-    git nano less \
+    git nano less wget \
 	&& docker-php-ext-install mysqli pdo pdo_mysql \
     && rm -rf /var/lib/apt/lists/*
+
+RUN wget https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 \
+    && chmod +x mhsendmail_linux_amd64 \
+    && mv mhsendmail_linux_amd64 /usr/local/bin/mhsendmail
