--- a/config/php/override-php.ini
+++ b/config/php/override-php.ini
@@ -14,7 +14,15 @@ error_reporting=E_ALL
 ;   Default Value: Off
 ;   Development Value: On
 ;   Production Value: On
+; Tells whether script error messages should be logged to the server's error log or error_log. This option is thus server-specific.
 log_errors=On
+
+;error_log string
+;Name of the file where script errors should be logged. The file should be writable by the web server's user.
+;If the special value syslog is used, the errors are sent to the system logger instead. On Unix, this means 
+;syslog(3) and on Windows it means the event log. See also: syslog(). If this directive is not set, errors 
+;are sent to the SAPI error logger. For example, it is an error log in Apache or stderr in CLI.
+error_log=/var/log/apache2/php-errors.log
 
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
@@ -23,15 +31,18 @@ max_execution_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 1024M
+memory_limit=1024M
 
 ; Maximum size of POST data that PHP will accept.
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
-post_max_size = 8M
+post_max_size=8M
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
-upload_max_filesize = 8M
+upload_max_filesize=8M
 
+; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
+; http://php.net/sendmail-path
+sendmail_path="/usr/local/bin/mhsendmail --smtp-addr=mailhog:1025"
