--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,5 +36,13 @@ services:
     ports:
       - "5000:80"
 
+  mailhog:
+    image: mailhog/mailhog
+    logging:
+      driver: "none" # disable saving logs
+    ports:
+      - 1025:1025 # smtp server
+      - 8025:8025 # web ui
+
 volumes:
   mysql-data:
