Fix public folder permissions + improve README

--- a/config/docker/Dockerfile
+++ b/config/docker/Dockerfile
@@ -5,8 +5,12 @@ ARG HOST_USER_ID
 ARG HOST_GROUP_NAME
 ARG HOST_GROUP_ID
 
+# Create e new groups the same as the host group, add host user to it and create home for host user
 RUN groupadd -g "${HOST_GROUP_ID}" "${HOST_GROUP_NAME}" && \
     useradd -g ${HOST_GROUP_ID} -u ${HOST_USER_ID} -m ${HOST_USER_NAME}
+
+# Apache runs in the container with the user www-data, add this user to the host group to grant him write permissions
+RUN usermod -a -G "${HOST_GROUP_ID}" www-data
 
 # Common tools
 RUN apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends \
